--- a/Einstweiliger-Rechtsschutz.tex
+++ b/Einstweiliger-Rechtsschutz.tex
@@ -1,8 +1,8 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Der einstweilige Rechtsschutz hat den Zweck, Rechte des Antragstellers vorläufig zu sichern. Zentral sind hier das sog. „Eilbedürfnis“ und das „Sicherungsinteresse“, §~11~Abs.~2~SGO. Obwohl einstweilige Anordnungen regelmäßig dazu dienen dürften, den status quo bis zur Entscheidung in der Hauptsache zu sichern, können sie auch ohne eine Klage in der Hauptsache beantragt werden.}
 
 \chapter{Der einstweilige Rechtsschutz}
-\blindtext[1]
+%\blindtext[1]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
