--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -1,12 +1,12 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Innerhalb des Organs „Schiedsgericht“ stellen die mit dem jeweiligen Verfahren befassten Richter das (entscheidende) „Schiedsgericht“ dar. Die genaue Zusammensetzung ergibt sich aus der Eigenschaft als Schiedsrichter oder (im Fall von Kammersystemen) aus der Geschäftsordnung. Die Zusammensetzung muss von vorn herein feststehen und darf nicht willkürlich verändert werden. Ein einmal befasster Richter kann regelmäßig nur durch Befangenheit oder Rücktritt aus einem Verfahren ausscheiden. Befangenheitsanträge müssen sich immer gegen jeweils eine Person richten und müssen einzeln (im Zweifel in der zeitlichen Reihenfolge der Antragstellung) entschieden werden. Näheres legt §~5~SGO fest.}
 
 \chapter{Zusammensetzung des Schiedsgerichts}
-\blindtext[1]
-\section{Ablehnung von Richtern}
-\blindtext[5]
-\section{Richterurlaub und -abwesenheit}
-\blindtext[5]
+%\blindtext[1]
+%\section{Ablehnung von Richtern}
+%\blindtext[5]
+%\section{Richterurlaub und -abwesenheit}
+%\blindtext[5]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
