--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -1,10 +1,10 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Juristische Auslegungsmethoden sind (in dieser, absteigender Reihenfolge) die Auslegung nach dem Wortlaut (Wortlautauslegung), nach der Systematik (systematische Auslegung), der Entstehungsgeschichte der fraglichen Reglung (historische Auslegung) und dem Sinn der fraglichen Regelung (teleologische Auslegung). Die historische Auslegung, d.h. die Entstehungsgeschichte einer Rechtsvorschrift kann für Vorschriften aus Parteisatzungen nur im Ausnahmefall herangezogen werden. Grundsätzlich gilt für jede Auslegung: Die Grenze ist der Wortlaut! Behandeln zwei anwendbare Bestimmungen den selben Regelungsgegenstand und setzen sie unterschiedliche Rechtsfolgen (Kollision), so gelten die folgenden „Vorfahrtsregeln“: Die neuere Regel überschreibt die ältere Regel, die speziellere Regel drängt sich vor die allgemeinere Regel und die höhere Regel steht über der niedrigeren Regel.}
 
 \chapter{Grundlagen der Normenauslegung}
-\blindtext[1]
-\section{Höherangiges Recht und Fortgeschrittene Normenauslegung}
-\blindtext[5]
+%\blindtext[1]
+%\section{Höherangiges Recht und Fortgeschrittene Normenauslegung}
+%\blindtext[5]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
