--- a/Standardworkflow-Anrufung.tex
+++ b/Standardworkflow-Anrufung.tex
@@ -1,10 +1,7 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (§~8~Abs.~1~SGO) und ob die Anrufung formell vollständig ist (§~8~Abs.~3~SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d.~§~8~Abs.~3~S.~1~SGO kann auch aus einer Postfachadresse bestehen.}
 
 \chapter{Schema für den Standardworkflow \enquote{Ich habe eine Anrufung erhalten}}
-\blindtext[1]
-\blindtext[1]\footcites{BSG1715HS}{BSG1615HS}{LSGBB147}{Rossner2014}
-\blindtext[1]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
