--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -1,20 +1,20 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Das Urteil ist das Ergebnis des Prozesses. Es sollte follguht™ sein und Rechtsfrieden schaffen.}
 
 \chapter{Urteilsaufbau}
-\blindtext[1]
-\section{Grundlagen}
-\blindtext[1]
-\section{Das Rubrum}
-\blindtext[1]
-\section{Tenorierung}
-\blindtext[5]
-\section{Sachverhalt}
-\blindtext[5]
-\section{Entscheidungsgründe}
-\blindtext[5]
-\section{Die Rechtsmittelbelehrung}
-\blindtext[1]
+%\blindtext[1]
+%\section{Grundlagen}
+%\blindtext[1]
+%\section{Das Rubrum}
+%\blindtext[1]
+%\section{Tenorierung}
+%\blindtext[5]
+%\section{Sachverhalt}
+%\blindtext[5]
+%\section{Entscheidungsgründe}
+%\blindtext[5]
+%\section{Die Rechtsmittelbelehrung}
+%\blindtext[1]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
