--- a/Verfahrensablauf.tex
+++ b/Verfahrensablauf.tex
@@ -1,16 +1,16 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Zentral im Verfahren ist die Gewähr rechtlichen Gehörs: Jede Partei muss Gelegenheit haben, zu allen Einzelheiten des Verfahrens Stellung zu nehmen. Üblicherweise setzt das Gericht mit Verfahrenseröffnung eine Frist zur Klageerwiderung und gleichzeitig eine weitere, so die Antragstellerin darauf noch antworten möchte. Weitere Sachverhaltserklärung erfolgt durch Fragen des Gerichts an die Parteien oder an Zeugen, die gebeten werden können, auszusagen. Eine Pflicht, dem Gericht Informationen zu geben, haben nur Organe der Partei. Die Parteien dürfen sich vertreten lassen; im Falle von Gliederungen oder Organen als Streitpartei ist eine Vertretung Pflicht. Die Vertretung muss immer eindeutig sein, d.h. bei mehreren Vertretern muss zumindest eine Rangfolge festgelegt werden. Jede Partei kann ihre eigenen Vertreter nach belieben bestellen, ändern oder entpflichten; dies wird mit Zugang bei Gericht wirksam. Andere Verfahrensordnungen (z.B. die Zivilprozessordnung [ZPO] oder die Verwaltungsgerichtsordnung [VwGO]) sind nur im Ausnahmefall anwendbar; die Notwendigkeit ihrer Anwendung muss im Urteil begründet werden.}
 
 \chapter{Verfahrensablauf und Verfahrensführung}
-\blindtext[1]
-\section{Grundsätze zu unterschiedlichen Klage- bzw Verfahrensarten}
-\blindtext[5]
-\section{Details zu unterschiedlichen Klage- bzw Verfahrensarten}
-\blindtext[5]
-\section{Vertretung im Verfahren}
-\blindtext[5]
-\section{Analoge Anwendung anderer Verfahrensordnungen}
-\blindtext[5]
+%\blindtext[1]
+%\section{Grundsätze zu unterschiedlichen Klage- bzw Verfahrensarten}
+%\blindtext[5]
+%\section{Details zu unterschiedlichen Klage- bzw Verfahrensarten}
+%\blindtext[5]
+%\section{Vertretung im Verfahren}
+%\blindtext[5]
+%\section{Analoge Anwendung anderer Verfahrensordnungen}
+%\blindtext[5]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
