--- a/Zulaessigkeit.tex
+++ b/Zulaessigkeit.tex
@@ -1,12 +1,12 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Zulässig ist eine Klage nur dann, wenn die Anrufung erfolgreich war, eine vorhergehende Schlichtung erfolgreich oder entbehrlich war. Form und Frist der Anrufung sind bereits vor Eröffnung zu prüfen, sind im Urteil jedoch noch einmal darzulegen. Die Klage ist gegn die Partei als Rechtsträger zu richten, solange nicht das jeweilige Organ von der Schiedsgerichtsordnung explizit als Klagegegner vorgesehen ist. Klagen gegen Einzelmitglieder, losgelöst von ihrer Funktion, sieht die SGO nicht vor.}
 
 \chapter{Zulässigkeit der Klagebehren}
-\blindtext[1]
-\section{Klagegegner (Richtige Auswahl, Vielzahl von Gegnern etc.)}
-\blindtext[5]
-\section{Grundlagen Beweiswürdigung}
-\blindtext[5]
+%\blindtext[1]
+%\section{Klagegegner (Richtige Auswahl, Vielzahl von Gegnern etc.)}
+%\blindtext[5]
+%\section{Grundlagen Beweiswürdigung}
+%\blindtext[5]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
