--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -1,16 +1,16 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Ein Schiedsgerichtshandbuch ist geeignet, erforderlich und auch angemessen, die Qualität der Rechtsprechung innerhalb der Parteigerichte der Piratenpartei zu verbessern.}
 
 \chapter{Einleitung}
-\blindtext[1]
-\blindtext[1]\footcites{BSG1415HS}{BSG1515HS}{Loewisch1985}
-\blindtext[1]
-\blindtext[1]\footcites{BSG1415HS}{LSGBB147}{Risse1985}
-\blindtext[1]
-\blindtext[1]\footcites{BSG1715HS}{LSGBB147}
-\blindtext[1]
+%\blindtext[1]
+%\blindtext[1]\footcites{BSG1415HS}{BSG1515HS}{Loewisch1985}
+%\blindtext[1]
+%\blindtext[1]\footcites{BSG1415HS}{LSGBB147}{Risse1985}
+%\blindtext[1]
+%\blindtext[1]\footcites{BSG1715HS}{LSGBB147}
+%\blindtext[1]
 
-\chapterbib
+%\chapterbib
 % \printshortbibliography[title={Urteile}, type=jurisdiction,heading=chapterbibliography]
 % \printshortbibliography[title={Andere Literatur}, nottype=jurisdiction,heading=chapterbibliography]
 % \end{refsection}
