--- a/Verfahrensarten.tex
+++ b/Verfahrensarten.tex
@@ -1,19 +1,19 @@
 % \begin{refsection}
-\chapterpreamble{Hier sollten ggf. erstmal die Dreizeiler rein so wie dieser Text.\newline\blindtext}
+\chapterpreamble{Grundsätzlich kann eine Klage darauf gerichtet sein, etwas außer Kraft zu setzen (Anfechtungsklage), jemanden zu verpflichten (Verpflichtungsklage), oder das Bestehen oder Nichtbestehen eines Rechtsverhältnisses festzustellen (Feststellungsklage). Die Feststellungsklage tritt hinter eine zulässige Anfechtung oder Verpflichtung immer zurück, sie ist nur subsidiär zulässig. Ist eine Sache erledigt, d.h. hat sich der reale Sachverhalt so verändert, dass die Klage keine Änderung in der Sache mehr herbeiführen kann, ist das Verfahren in der Hauptsache erledigt. Nur in Fällen, in denen ein besonderes Fortsetzungsinteresse besteht (etwa zur Rehabilitierung) kann das Verfahren als Fortsetzungsfeststellungsklage weitergeführt werden.}
 
 \chapter{Verfahrensarten}
-\section{Anfechtung von Mitgliederversammlungen}
-\blindtext[1]
-\section{Gliederungsstreitigkeiten}
-\blindtext[1]
-\section{Grundlagen Ordnungsmaßnahmen}
-\blindtext[1]
-\subsection{Gliederungsordnungsmaßnahmen}
-\blindtext[5]
-\subsection{Individualordnungsmaßnahmen}
-\blindtext[5]
-\section{Normenkontrolle}
-\blindtext[1]
+%\section{Anfechtung von Mitgliederversammlungen}
+%\blindtext[1]
+%\section{Gliederungsstreitigkeiten}
+%\blindtext[1]
+%\section{Grundlagen Ordnungsmaßnahmen}
+%\blindtext[1]
+%\subsection{Gliederungsordnungsmaßnahmen}
+%\blindtext[5]
+%\subsection{Individualordnungsmaßnahmen}
+%\blindtext[5]
+%\section{Normenkontrolle}
+%\blindtext[1]
 
-\chapterbib
+%\chapterbib
 % \end{refsection}
