Package enumitem is useful for customizing enumerations.

--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -11,6 +11,7 @@
 \RequirePackage{xpatch}
 
 \RequirePackage{enumerate}
+\RequirePackage{enumitem}
 % \RequirePackage{makeidx}
 \RequirePackage[useindex,makeindex]{splitidx}
 
