§§ Ligatur via \SSS

--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -26,6 +26,10 @@
 \RequirePackage[right]{eurosym}
 \RequirePackage[multiple,hang,bottom]{footmisc}
 
+% §§ Ligatur
+% Geklaut aus dem Package Jurabib
+\providecommand*{\SSS}{\S\kern-.8pt\S\relax}%
+
 \DeclareSortingScheme{sghandbuch}{
 %   \sort{\citeorder}
   \sort{\field{author}\field{editor}}
