shorthand macro for simple quotes

--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -26,6 +26,9 @@
 \RequirePackage[right]{eurosym}
 \RequirePackage[multiple,hang,bottom]{footmisc}
 
+% Kommando für Zitate, ist schachtelbar
+\providecommand*{\Zitat}[1]{\emph{\enquote{#1}}}
+
 % §§ Ligatur
 % Geklaut aus dem Package Jurabib
 \providecommand*{\SSS}{\S\kern-.8pt\S\relax}%
