no list item spacing

--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -26,6 +26,8 @@
 \RequirePackage[right]{eurosym}
 \RequirePackage[multiple,hang,bottom]{footmisc}
 
+\setlist{nolistsep}
+
 % Kommando für Zitate, ist schachtelbar
 \providecommand*{\Zitat}[1]{\emph{\enquote{#1}}}
 
