--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -34,7 +34,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \begin{flushright}
 \Large
 \normalfont
--- (Unbekannt, iirc. Hans-Jürgen Papier)
+-- (unbekannt, Hans-Jürgen Papier zugeschrieben)
 \end{flushright}
 \end{quote}
 \hfill				% Zentrierung
