--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -1,10 +1,110 @@
-% \begin{refsection}
-\chapterpreamble{Juristische Auslegungsmethoden sind (in dieser, absteigender Reihenfolge) die Auslegung nach dem Wortlaut (Wortlautauslegung), nach der Systematik (systematische Auslegung), der Entstehungsgeschichte der fraglichen Reglung (historische Auslegung) und dem Sinn der fraglichen Regelung (teleologische Auslegung). Die historische Auslegung, d.h. die Entstehungsgeschichte einer Rechtsvorschrift kann für Vorschriften aus Parteisatzungen nur im Ausnahmefall herangezogen werden. Grundsätzlich gilt für jede Auslegung: Die Grenze ist der Wortlaut! Behandeln zwei anwendbare Bestimmungen den selben Regelungsgegenstand und setzen sie unterschiedliche Rechtsfolgen (Kollision), so gelten die folgenden „Vorfahrtsregeln“: Die neuere Regel überschreibt die ältere Regel, die speziellere Regel drängt sich vor die allgemeinere Regel und die höhere Regel steht über der niedrigeren Regel.}
+%\begin{refsection}
+\chapterpreamble{\Zitat{Bei der Auslegung einer Willenserklärung ist der wirkliche Wille zu erforschen und nicht an dem buchstäblichen Sinne des Ausdrucks zu haften.} – \S~133~BGB}
 
 \chapter{Grundlagen der Normenauslegung}
-%\blindtext[1]
-%\section{Höherangiges Recht und Fortgeschrittene Normenauslegung}
-%\blindtext[5]
+\section{Die Struktur von Rechtssätzen}
+Rechtssätze sind Handlungsanweisungen. Gleichgültig, ob die fragliche \emph{Norm} dem Grundgesetz oder einer Vereinssatzung entstammt, schreibt sie eine bestimmte Verfahrensweise vor.\footnote{Ausnahmen hiervon bilden nur sog. \emph{Legaldefinitionen}, d.h. Rechtssätze, die keine Handlung sondern einen Zustand oder einen Begriff beschreiben.} Der Aufbau einer Norm ist dabei schematisch, ihre Struktur folgt wiederkehrenden Mustern.
+
+\subsection{Formale Strukturen}
+Gliederung schafft Übersicht. Daher sind unterschiedliche Rechtsbereiche in unterschiedlichen Gesetzen geregelt. Die wichtigste Gliederungsebene in Gesetzen (wie auch in den Satzungen der Partei) sind die \emph{Paragraphen},\footnote{Seltener, z.B. im Grundgesetz, die Artikel.} die zur einfacheren Auffindbarkeit und Zitierbarkeit von Normen fortlaufend nummeriert sind.
+
+Umfassendere Regelwerke (wie bspw. das BGB) sind darüber teilweise in Bücher, Teile, Abschnitte, Unterabschnitte, Titel, Untertitel, Kapitel usw. gegliedert. Eine solche Gliederung nimmt die Satzung der Piratenpartei Deutschland insofern vor, als dass sie in drei \enquote{Abschnitte} unterteilt ist. Da die Abschnitte allerdings jeweils unterschiedlich zitiert werden, nämlich die Grundlagensatzung\footnote{Wird \enquote{die Bundessatzung} zitiert, bezieht sich das Zitat in der Regel auf die Grundlagensatzung.} (Abschnitt~A), die Finanzordnung (Abschnitt~B) und die Schiedsgerichtsordnung (Abschnitt~C) und auch die Paragraphenzählung jeweils bei 1 beginnt, ist es leichter, sie sich als eigenständige Regelwerke zu vergegenwärtigen. So untergliedert letztlich nur die Finanzordnung oberhalb der Ebene der Paragraphen.
+
+Paragraphen gliedern sich zunächst in Absätze. Auch Absätze sind nummeriert, allerdings nur eindeutig in Bezug auf den Paragraphen, nicht mehr in Bezug auf das \enquote{Gesamtwerk}. Absätze können einen oder mehrere Sätze und/oder Nummern (d.h. Aufzählungen, teilweise ihrerseits verschachtelt) enthalten. Teilweise bietet es sich an, Sätze als Halbsätze, Alternativen oder Varianten zu zitieren, wenn sich in einem einzelnen Satz mehrere Kombinationen von Tatbeständen und Rechtsfolgen verbergen (s.u. \emph{Tatbestände und Rechtsfolgen}).
+
+\subsubsection{Das Normzitat}
+Da der Paragraph (Artikel) die wichtigste Gliederungsebene ist, ist er der Ausgangspunkt eines jeden Normzitats. Von ihm ausgehend wird \enquote{nach unten}, d.h. nach Absätzen, Sätzen, Nummern usw. zitiert. Je genauer der betreffende Abschnitt durch das Zitat benannt wird, desto leichter lässt er sich durch den Leser wiederfinden – es gilt: \Zitat{Viel hilft viel}! Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt. Die Gliederungsebenen zwischen der Ebene \enquote{Regelwerk} und der Ebene \enquote{Paragraph} werden nicht mitzitiert, da sie lediglich der systematischen Übersicht dienen; die Nennung von Regelwerk und nummeriertem Paragraphen reicht zur Auffindung bereits aus.\footnote{Es gibt daher auch keine vereinheitlichen Regeln über Verwendung oder gar Rangfolge dieser reinen \enquote{Gliederungsebenen}; sie können vom jeweiligen Gesetz- bzw. Satzungsgeber völlig frei verwendet werden.}
+
+\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
+
+\subsection{Tatbestände und Rechtsfolgen}
+Wichtiger als die formalen, äußeren Strukturen ist der semantische, innere Aufbau von Normen: Sie gliedern sich in \emph{Tatbestände} und \emph{Rechtsfolgen}. Dem zu Grunde liegt ein simples \emph{Wenn-Dann}-Prinzip: Wenn der Tatbestand erfüllt ist, tritt die Rechtsfolge ein.
+
+Tatbestände sind demnach reelle Sachverhalte, also tatsächliche Geschehnisse oder Handlungen. Die Rechtsfolgen sind die Handlungsanweisungen (s.o.), die sich ergeben, wenn ein solcher Sachverhalt eintritt, ein Tatbestand also erfüllt wird. Zuweilen führen mehrere Tatbestände zur selben Rechtsfolge, ebenso können an einen Tatbestand mehrere Rechtsfolgen geknüpft werden (in dieser Konstellation oft mit einer Auswahl durch die Rechtsanwenderin oder den Rechtsanwender). In einem Satz können sich dadurch durchaus mehrere Rechtssätze verbergen.
+
+\textbf{Beispiel:} \S~6 Abs.~1 S.~1~BS (\Zitat{Verstößt ein Pirat gegen die Satzung oder gegen Grundsätze oder Ordnung der Piratenpartei Deutschland und fügt Ihr damit Schaden zu, so kann der Bundesvorstand folgende Ordnungsmaßnahmen anordnen: Verwarnung, Verweis, Enthebung von einem Parteiamt, Aberkennung der Fähigkeit ein Parteiamt zu bekleiden, Ausschluss aus der Piratenpartei Deutschland.} enthält insg. 15 Rechtssätze: An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsverstoß können nach Auswahl des Bundesvorstands jeweils fünf Rechtsfolgen (Verwarnung, Verweis, Enthebung, Wählbarkeitsverlust, Ausschlussantrag beim Schiedsgericht\footnote{Vgl. \S~6 Abs.~2~BS, ebenso \S~10 Abs.~5 S.~1~PartG.} geknüpft werden.
+
+%\subsection{Verweisungen}
+
+\section{Die Subsumtion}
+Juristerei ist der Streit um Begrifflichkeiten. Aus der Frage, ob ein bestimmter, realer Sachverhalt unter einen juristischen Begriff zu fassen (\emph{subsumieren}, von lat. \emph{sub-sumere} – „darunter fassen“) ist, oder nicht, leitet sich letztlich die Anwendung eines Rechtssatzes ab: \S~14~BS bspw. schreibt vor, dass \emph{\enquote{Die Satzungen der Landesverbände und ihrer Untergliederungen […] mit den grundsätzlichen Regelungen dieser Satzung übereinstimmen}} müssen. Nur, wenn klar ist, ob eine Regelung der Bundessatzung eine \enquote{grundsätzliche Regel} ist, oder nicht, ist klar, ob eine Landessatzung davon abweichen darf, oder nicht. Da \S~14~BS die grundsätzlichen Regeln nicht selbst nennt, müssen sie erst ermittelt werden. Möglich wäre hier, die Aufzählung selbst vorzunehmen, d.h. alle grundsätzlichen Regeln herauszufinden. Das aber ist zeitaufwändig und regelmäßig zu umfangreich, da ja nur die Frage zu klären ist, ob eine bestimmte Regel der Satzung eine grundsätzliche Regel ist und daher alle anderen Regeln außer Betracht bleiben können. Sinnvoller ist, für den Begriff der \enquote{grundsätzlichen Regel} einen anderen Begriff zu finden, der diesen anhand von prüfbaren Merkmalen beschreibt. Gesucht wird also eine \emph{Definition}, die durch Auslegung der Bedeutung des zu definierenden Begriffs zu finden ist.
+
+Methodisch am besten zu vergegenwärtigen ist ein ergebnisorientierter Subsumtionsvorgang, indem er nach dem folgenden Schema bearbeitet wird:
+\begin{enumerate}
+\item Obersatz
+\item Definition
+\item Subsumtion
+\item Ergebnis
+\end{enumerate}
+
+Diese Methodik ist Grundlage jeden juristischen Studiums und wird dort als sog. \enquote{Gutachtenstil} gelehrt. Tatsächlich eignet sich dieser Stil hervorragend, auch komplexe Sachverhalte vollumfänglich juristisch zu prüfen. Es bietet sich daher an, dieses Schema bei der Prüfung eines Sachverhalts einzuhalten, auch wenn das Urteil letztlich etwas anders zu formulieren ist (s.a. das entsprechende Kapitel).
+
+Der \textbf{Obersatz} stellt die \enquote{Fallfrage} dar, die zu prüfen ist. Im bereits oben verwendeten Beispiel der \enquote{grundsätzlichen Bestimmung} lautete die konkrete Frage also: \Zitat{Ist die fragliche Satzungsbestimmung eine grundlegende Bestimmung im Sinne von \S~14~BS?}
+
+Die \textbf{Definition} gibt Antwort auf die im Obersatz implizit gestellte Frage \Zitat{Was ist überhaupt eine grundsätzliche Bestimmung?}. Wenn nicht auf bestehende Rechtsprechung zurückgegriffen werden kann\footnote{Vgl. hierzu ausführlich \href{https://wiki.piratenbrandenburg.de/images/f/f2/LSG-Bbg-13-5\_Urteil\_2014\_07\_09.pdf}{LSG~Bbg~13/5} vom 9. Juli 2014, S.8; \href{http://piraten-bsg.de/git/BSG\%2012-15-H\%20S.pdf}{BSG~12/15-H~S} vom 28. Mai 2015, S.~5.} muss hier durch Auslegung eine Definition bestimmt werden.
+
+Die \textbf{Subsumtion} ist der Schritt, in dem geprüft wird, ob der zu prüfende Sachverhalt die zuvor gefundene Definition erfüllt. Anstatt also zu entscheiden, ob eine Satzungsbestimmung \enquote{grundlegend} ist, wird nun entschieden, ob sie die Bedingungen erfüllt, die eine grundlegende Satzungsbestimmung ausmachen. Dieser Schritt beantwortet im Endeffekt die Fallfrage; anhand der Definition aber wird begründet, warum die Antwort \enquote{Ja} oder \enquote{Nein} lautet. Während sich also an der Frage nichts ändert, bietet die Subsumtion unter einen zuvor definierten Begriff eine nachvollziehbare und begründete Antwort.
+
+Das \textbf{Ergebnis} schließlich ist mehr als die Antwort der Subsumtion: Je nachdem, wie es aussieht, kommt die Rechtsfolgenseite einer Rechtsnorm zur Anwendung oder nicht. Das Ergebnis bestimmt nun über den weiteren Verlauf des Verfahrens oder der Prüfung. Es zumindest gedanklich zu formulieren dient der eigenen Kontrolle: \Zitat{Passt meine Antwort zur Frage?}
+
+\section{Auslegung einer einzelnen Norm}
+\subsection{Wortlautauslegung}
+Diese Methode wird auch als grammatische oder semantische Auslegung bezeichnet. Sie setzt an der Bedeutung der verwendeten Begriffe an und ist damit der Ausgangspunkt einer jeden Auslegung. Dem Wortlaut nach auszulegen bedeutet, zu prüfen, ob ein bestimmter Begriff des Sachverhalts unmittelbar unter einen Begriff der fraglichen Norm zu fassen ist. Die Begriffe müssen daher jeweils ihrer eigenen Bedeutung und dem Kontext ihrer Verwendung nach zueinander passen. Dabei wird es Fälle geben, in denen diese Frage eindeutig mit \enquote{Ja} zu beantworten ist, andere, in denen die Antwort eindeutig \enquote{Nein} lautet. Schließlich wird es Fälle geben, die nicht eindeutig sind. Je näher der Begriff des Sachverhalts dem Begriff der Norm ist und je besser er auch ihren Sinn erfüllt, desto eher spricht das für eine \emph{weite} Auslegung des Norm-Begriffs. Umgekehrt kann auch \emph{eng} ausgelegt werden, d.h. die \enquote{Zweifelsfälle} werden gerade nicht zugelassen.
+
+\subsection{Systematische Auslegung}
+Die Systematische Auslegung betrachtet nicht die einzelne Norm, sondern ihre Stellung im Gesamtgefüge des \enquote{Systems} ihres Rechtsgebiets (bspw. einer Satzung). Dabei gelten die folgenden vier Postulate:\footnote{Vgl. umfassend: Puppe, Kleine Schule des juristischen Denkens, Göttingen 2008, S.~66~ff.}
+\begin{enumerate}
+\item \textbf{Das Postulat der Widerspruchsfreiheit:} Das Gesetz widerspricht sich nicht selbst.
+\item \textbf{Das Postulat der Nichtredundanz:} Das Gesetz sagt nichts Überflüssiges.
+\item \textbf{Das Postulat der Vollständigkeit:} Das Gesetz lässt keine Regelungslücken.
+\item \textbf{Das Postulat der systematischen Ordnung:} Die Vorschriften des Gesetzes sind sinnvoll geordnet.
+\end{enumerate}
+
+Widerspruchsfreiheit bedeutet, dass die Handlungsanweisungen, die bspw. eine Satzung beinhalten, für jede Situation eindeutig sind. Häufig jedoch fällt ein Sachverhalt unter mehrere Tatbestände, die jeweils unterschiedliche Rechtsfolgen setzen. Durch systematische Auslegung wird bestimmt, welche Norm anwendbar ist (dazu ausführlich weiter unten: \emph{Das Zusammenspiel von Normen}). Ebenso können die umgebenden Normen oder auch das Gesamtregelwerk, der eine Norm zugeordnet ist, Hinweise auf deren Interpretation bieten.
+
+Nichtredundanz bedeutet, dass jede Norm einen Anwendungsbereich besitzt. Tatbestände dürfen daher nicht so weit ausgelegt werden, dass sie andere Tatbestände vollständig umfassen. Umgekehrt dürfen sie auch nicht so eng ausgelegt werden, dass sie keinen eigenen Anwendungsbereich mehr besitzen, sondern von einer anderen Norm völlig eingeschlossen sind.
+
+Vollständigkeit bedeutet, dass aus ungeregelte Sachverhalten keine verpflichtenden Normen entstehen. Eine \enquote{Lücke} in der Satzung bedeutet nicht automatisch einen Fehler, besser: das Fehlen einer Regelung. Vielmehr gilt zunächst die Annahme, dass der Parteitag als Satzungsgeber davon ausging, diesen Sachverhalt nicht regeln zu müssen oder aber er wollte es nicht.
+
+Systematische Ordnung bedeutet, dass die Anordnung von Einzelnormen im Gesamtregelwerk einen Sinn hat. Je näher sich bspw. einzelne Normen in der formalen Aufzählung sind, desto größer ist die Wahrscheinlichkeit, dass sie auch inhaltlich im Zusammenhang stehen. Davon unabhängig ist zu beachten, dass Recht in der Regel nach der sog. \enquote{Klammertechnik} verfasst ist. Der Begriff ist an die Verklammerung mathematischer Operationen in einer Gleichung angelehnt: \enquote{Vor die Klammer} wird ein \emph{allgemeiner Teil} gezogen, der auf alle \emph{besonderen Teile} \enquote{in der Klammer} Anwendung findet. Dadurch kann es passieren, dass auch Regeln, die in der Paragraphenzählung weit auseinander liegen, in engem Zusammenhang stehen. Zu beachten ist schließlich, dass schon die Gliederung in allgemeinen Teil am Anfang und besonderen Teil im weiteren Verlauf eindeutig dagegen spricht, die Bedeutung einer Norm anhand ihrer Paragraphennummer ablesen zu wollen: Zu behaupten, eine Norm sei \enquote{wichtiger} als eine andere, nur weil ihre Ordnungsnummer niedriger sei, ist schlicht falsch. 
+
+\subsection{Historische Auslegung}
+Die historische Auslegung befasst sich mit der Entstehungs- und Änderungsgeschichte einer Norm. Bspw. aus Diskussionsprotokollen kann hervorgehen, ob nach dem Willen der Autorinnen und Autoren ein Sachverhalt vom Tatbestand einer Norm erfasst werden sollte, oder nicht. Ebenso ist eine Änderung, die dazu führte, dass ein einstmals eindeutig erfasster Sachverhalt nun zweifelhaft erscheint, ein klares Indiz für eine enge Auslegung der jeweiligen Norm.
+
+Für die Satzungen privatrechtlicher Organisationen (so auch Parteien) gilt jedoch allgemein, dass ihre Satzungen aus sich heraus verständlich sein sollen. Weder soll Recherche zu (ohnehin selten in der notwendigen Ausführlichkeit bestehenden) Protokollen, noch zu alten Fassungen der Satzung notwendig sein. Daraus wird abgeleitet, dass sich die historische Auslegung allgemein verbietet.\footnote{Sauter} Ausnahmen hiervon sind daher stets gut zu begründen!
+
+\subsection{Teleologische Interpretation}
+Die teleologische Interpretation leitet sich von \enquote{τέλος} (gr. \enquote{Ziel}) ab. Der Schwerpunkt liegt hier also auf dem Zweck der Norm, nicht auf ihrem Wortlaut. In die Nähe zur historischen Auslegung rückt dabei die Fragestellung, was die Autoren und Autorinnen der Norm mit ihrer Schaffung bezweckt haben. In die Nähe der systematischen Auslegung rückt die Frage, was mit einer solchen Norm \enquote{objektiv sinnvoll} bezweckt werden sollte. Die Antwort auf diese Fragen gibt regelmäßig den Ausschlag, wenn bloße Wortlaut- und systematische Auslegung nicht weiter geholfen haben.
+
+In sehr seltenen Fällen kann der Sinngehalt einer Norm dazu führen, dass ein Begriff dahingehend uminterpretiert wird, dass er nun auch Begriffe umfasst, die vom Wortlaut eigentlich nicht gedeckt sind (s.o.); hier spricht man von einer \emph{teleologischen Erweiterung}. Umgekehrt kann ein Begriff auch \emph{teleologisch reduziert} werden, wenn aus Zweckmäßigkeitserwägungen auch Sachverhalte außen vor bleiben sollen, die eigentlich vom Wortlaut klar umfasst sind. Diese Methoden sind aber Ausnahmen, nicht die Regel!
+
+\subsection{Die Rangfolge der Auslegungsmethoden}
+Die Rangfolge der Auslegungsmethoden entspricht der Reihenfolge, in der sie hier beschrieben wurden:
+\begin{enumerate}
+\item Wortlautauslegung
+\item Systematische Auslegung
+\item Historische Auslegung
+\item Teleologische Interpretation
+\end{enumerate}
+
+Der Wortlaut ist ebenso Ausgangspunkt wie Grenze einer jeden Auslegung, die semantische Auslegung ist daher die wichtigste Methode. Die teleologische Interpretation bietet den meisten Spielraum und ist daher die schwächste, sie ist dann zu Rate zu ziehen, wenn die anderen Methoden nicht allein zu einem Ergebnis kommen. In der Bedeutung dazwischen steht die systematische Auslegung; historisch ausgelegt wird eine Satzung nur im Ausnahmefall.
+
+Schematisch bedeutet das, dass zunächst zu prüfen ist, ob der Sachverhalt unter den Wortlaut der Norm fassbar ist (Wortlautauslegung). Daraufhin ist zu prüfen, ob die Norm anwendbar ist (Systematische Auslegung) und ggf. ob sich aus der Stellung der Norm im Gesamtgefüge weitere Hinweise auf die Subsumtion ergeben (etwa, ob die Norm eher eng oder eher weit auszulegen ist). Schließlich ist die Frage zu stellen, ob die Anwendung der Norm im konkreten Fall nicht zu auffälligen Widersprüchen zu ihrem Sinn und Zweck führt. Letzteres darf aber nicht zur völligen Uminterpretation des Wortlautes führen!
+
+\section{Das Zusammenspiel von Normen}
+Behandeln zwei anwendbare Bestimmungen den selben Regelungsgegenstand und setzen sie unterschiedliche Rechtsfolgen (\emph{Kollision}), so gelten die folgenden \enquote{Vorfahrtsregeln}: Die neuere Regel überschreibt die ältere Regel, die speziellere Regel drängt sich vor die allgemeinere Regel und die höhere Regel steht über der niedrigeren Regel.
+
+%\subsection{Der Stufenbau der Rechtsordnung}
+%\subsubsection{Direkter Einfluss höherrangigen Rechts}
+%lex superior
+%\subsubsection{Indirekter Einfluss höherrangigen Rechts}
+%Verfassungskonforme Auslegung?
+%Konventionskonforme Auslegung?
+%\subsubsection{Höherrangiges Satzungsrecht}
+%\S~6~Abs.~1~PartG, \S~13~BS
+%\subsection{Kollisionsregeln}
+%\subsection{Analogieschlüsse}
+%\section{} %Irgendwas mit Schlüssen?
 
 %\chapterbib
-% \end{refsection}
+%\end{refsection}
