--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -74,24 +74,17 @@ Die historische Auslegung befasst sich mit der Entstehungs- und Änderungsgeschi
 Für die Satzungen privatrechtlicher Organisationen (so auch Parteien) gilt jedoch allgemein, dass ihre Satzungen aus sich heraus verständlich sein sollen. Weder soll Recherche zu (ohnehin selten in der notwendigen Ausführlichkeit bestehenden) Protokollen, noch zu alten Fassungen der Satzung notwendig sein. Daraus wird abgeleitet, dass sich die historische Auslegung allgemein verbietet.\footnote{Sauter} Ausnahmen hiervon sind daher stets gut zu begründen!
 
 \subsection{Teleologische Interpretation}
-Die teleologische Interpretation leitet sich von \enquote{τέλος} (gr. \enquote{Ziel}) ab. Der Schwerpunkt liegt hier also auf dem Zweck der Norm, nicht auf ihrem Wortlaut. In die Nähe zur historischen Auslegung rückt dabei die Fragestellung, was die Autoren und Autorinnen der Norm mit ihrer Schaffung bezweckt haben. In die Nähe der systematischen Auslegung rückt die Frage, was mit einer solchen Norm \enquote{objektiv sinnvoll} bezweckt werden sollte. Die Antwort auf diese Fragen gibt regelmäßig den Ausschlag, wenn bloße Wortlaut- und systematische Auslegung nicht weiter geholfen haben.
+Die teleologische Interpretation leitet sich von \enquote{τέλος} (gr. \enquote{Ziel}) ab. Der Schwerpunkt liegt hier also auf dem Zweck der Norm, nicht auf ihrem Wortlaut. In die Nähe zur historischen Auslegung rückt dabei die Fragestellung, was der ursprüngliche Zweck der Norm war, besser: ist. In die Nähe der systematischen Auslegung rückt die Frage, was mit einer solchen Norm \enquote{objektiv sinnvoll} bezweckt werden kann; hier wird nach dem Sinn und Zweck der Norm im aktuellen Gefüge gefragt. Die Antworten auf diese Fragen geben regelmäßig den Ausschlag, wenn bloße Wortlaut- und systematische Auslegung nicht weiter geholfen haben.
 
-In sehr seltenen Fällen kann der Sinngehalt einer Norm dazu führen, dass ein Begriff dahingehend uminterpretiert wird, dass er nun auch Begriffe umfasst, die vom Wortlaut eigentlich nicht gedeckt sind (s.o.); hier spricht man von einer \emph{teleologischen Erweiterung}. Umgekehrt kann ein Begriff auch \emph{teleologisch reduziert} werden, wenn aus Zweckmäßigkeitserwägungen auch Sachverhalte außen vor bleiben sollen, die eigentlich vom Wortlaut klar umfasst sind. Diese Methoden sind aber Ausnahmen, nicht die Regel!
+In sehr seltenen Fällen kann der Sinngehalt einer Norm dazu führen, dass ein Begriff dahingehend uminterpretiert wird, dass er nun auch Begriffe umfasst, die vom Wortlaut eigentlich nicht gedeckt sind (s.o.); hier spricht man von einer \emph{teleologischen Erweiterung}. Umgekehrt kann ein Begriff auch \emph{teleologisch reduziert} werden, wenn aus Zweckmäßigkeitserwägungen auch Sachverhalte außen vor bleiben sollen, die eigentlich vom Wortlaut klar umfasst sind.\footnote{Ein Beispiel einer solchen teleologischen Korrektur ist die Auslegung des \S~8 Abs.~3 Nr.~3~SGO, der von \enquote{Anträgen} im Plural spricht, wohingegen auch die Erhebung einer Klage unter Stellung nur eines einzelnen Antrags unzweifelhaft zulässig sein soll!} Diese Methoden sind aber Ausnahmen, nicht die Regel!
 
 \subsection{Die Rangfolge der Auslegungsmethoden}
-Die Rangfolge der Auslegungsmethoden entspricht der Reihenfolge, in der sie hier beschrieben wurden:
-\begin{enumerate}
-\item Wortlautauslegung
-\item Systematische Auslegung
-\item Historische Auslegung
-\item Teleologische Interpretation
-\end{enumerate}
+Es gibt keine starre Rangfolge der Auslegungsmethoden. Allerdings ist der Wortlaut ebenso Ausgangspunkt wie Grenze einer jeden Auslegung, die semantische Auslegung ist daher die wichtigste Methode. Die teleologische Interpretation bietet den meisten Spielraum und bedarf für ein klares Ergebnis der meisten Begründung, sie ist praktischerweise dann zu Rate zu ziehen, wenn die anderen Methoden nicht allein zu einem Ergebnis kommen. Im Begründungsaufwand dazwischen steht die systematische Auslegung; historisch ausgelegt wird eine Satzung nur im Ausnahmefall.
 
-Der Wortlaut ist ebenso Ausgangspunkt wie Grenze einer jeden Auslegung, die semantische Auslegung ist daher die wichtigste Methode. Die teleologische Interpretation bietet den meisten Spielraum und ist daher die schwächste, sie ist dann zu Rate zu ziehen, wenn die anderen Methoden nicht allein zu einem Ergebnis kommen. In der Bedeutung dazwischen steht die systematische Auslegung; historisch ausgelegt wird eine Satzung nur im Ausnahmefall.
-
-Schematisch bedeutet das, dass zunächst zu prüfen ist, ob der Sachverhalt unter den Wortlaut der Norm fassbar ist (Wortlautauslegung). Daraufhin ist zu prüfen, ob die Norm anwendbar ist (Systematische Auslegung) und ggf. ob sich aus der Stellung der Norm im Gesamtgefüge weitere Hinweise auf die Subsumtion ergeben (etwa, ob die Norm eher eng oder eher weit auszulegen ist). Schließlich ist die Frage zu stellen, ob die Anwendung der Norm im konkreten Fall nicht zu auffälligen Widersprüchen zu ihrem Sinn und Zweck führt. Letzteres darf aber nicht zur völligen Uminterpretation des Wortlautes führen!
+Obgleich es keine Rangfolge unter den Auslegungsmethoden gibt, kann die obige Reihenfolge als Prüfungsreihenfolge in der Auslegung dienen: Schematisch bedeutet das, dass zunächst zu prüfen ist, ob der Sachverhalt unter den Wortlaut der Norm fassbar ist (Wortlautauslegung). Daraufhin ist zu prüfen, ob die Norm anwendbar ist (Systematische Auslegung) und ggf. ob sich aus der Stellung der Norm im Gesamtgefüge weitere Hinweise auf die Subsumtion ergeben (etwa, ob die Norm eher eng oder eher weit auszulegen ist). Schließlich ist die Frage zu stellen, ob die Anwendung der Norm im konkreten Fall nicht zu auffälligen Widersprüchen zu ihrem Sinn und Zweck führt. Letzteres darf aber nicht zur völligen Uminterpretation des Wortlautes führen!
 
 \section{Das Zusammenspiel von Normen}
+% Dieser Abschnitt ist ein Dreizeiler, der Rest kommt mit Milestone 5
 Behandeln zwei anwendbare Bestimmungen den selben Regelungsgegenstand und setzen sie unterschiedliche Rechtsfolgen (\emph{Kollision}), so gelten die folgenden \enquote{Vorfahrtsregeln}: Die neuere Regel überschreibt die ältere Regel, die speziellere Regel drängt sich vor die allgemeinere Regel und die höhere Regel steht über der niedrigeren Regel.
 
 %\subsection{Der Stufenbau der Rechtsordnung}
