--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -13,7 +13,7 @@ für die Piratenpartei Deutschland und Untgliederungen\\
 \newindex[Urteilsverzeichnis]{jurisdiction}
 \newindex[Stichwortverzeichnis]{idx}
 \newindex[Paragraphenverzeichnis]{paridx}
-
+\makenomenclature
 % \usepackage{refsection}
 
 \begin{document}
@@ -72,7 +72,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 
 \onecolumn
 \printbibliography[heading=bibliography]
-\twocolumn
+\printnomenclature
 
 \printindex[jurisdiction]
 
