--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -74,7 +74,13 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \printbibliography[heading=bibliography]
 \printnomenclature
 
+\setindexpreamble[jurisdiction]{Ein Verzeichnis aller für dieses Handbuch relevanten Urteile und der Textstellen, an denen über deren Inhalt geschrieben wird.}
 \printindex[jurisdiction]
 
+\setindexpreamble[idx]{Ein ganz normales Sachregister zu wichtigeren und weniger wichtigeren Stichworten.}
+\printindex[idx]
+
+\setindexpreamble[paridx]{Ein Paragraphenregister zum schnellen Auffinden von relevanten Textstellen in diesem Handbuch zu bestimmenten Paragraphen, um es als effektives Nachschlagwerk ähnlich einem Kommentar nutzen zu können.}
+\printindex[paridx]
 
 \end{document}
