--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -68,10 +68,11 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \input{Instanzenzug.tex}
 
 \appendix
-
-
 \onecolumn
-\printbibliography[heading=bibliography]
+
+\printbibliography[heading=bibliography,title={Rechtsprechungsverzeichnis}, type=jurisdiction]
+\printbibliography[heading=bibliography,nottype=jurisdiction]
+
 \printnomenclature
 
 \setindexpreamble[jurisdiction]{Ein Verzeichnis aller für dieses Handbuch relevanten Urteile und der Textstellen, an denen über deren Inhalt geschrieben wird.}
